@@ -23,6 +23,9 @@ Ipe 7.2.28
  * Show error message during startup on Windows when Ipe was installed
    on a path containing accented characters (or anything else not in
    ASCII) (#467).
+
+ * Show error message when parsing an Ipe file containing a singular
+   ellipse (#437).
  
 ----------------------------------------------------------------------
 
